Milestone report & updated notebook with figures

--- a/Animal Shelter Analysis.ipynb
+++ b/Animal Shelter Analysis.ipynb
@@ -3292,7 +3292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that that higher age groups do not have longer adoption times; in fact, they have significantly *shorter* adoption times, and the lowest age group has significantly higher adoption times. I'd speculate that this is also a result of the youngest group having the highest volume."
+    "#### We can see that that higher age groups do not have longer adoption times; in fact, they have significantly *shorter* adoption times, and the lowest age group has significantly higher adoption times. I'd speculate that this is also a result of the youngest group having the highest volume."
    ]
   },
   {
@@ -4289,6 +4289,117 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100% |########################################################################|\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Variable</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Mean of Others</th>\n",
+       "      <th>Mean Difference</th>\n",
+       "      <th>95% CI</th>\n",
+       "      <th>p-value_high</th>\n",
+       "      <th>p-value_low</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dog</td>\n",
+       "      <td>161.294692</td>\n",
+       "      <td>124.494875</td>\n",
+       "      <td>36.799818</td>\n",
+       "      <td>[29.71343829231407, 44.12495329624621]</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Cat</td>\n",
+       "      <td>124.267499</td>\n",
+       "      <td>160.507760</td>\n",
+       "      <td>-36.240262</td>\n",
+       "      <td>[-43.30882050953682, -29.10321515854632]</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bird</td>\n",
+       "      <td>144.004861</td>\n",
+       "      <td>143.042332</td>\n",
+       "      <td>0.962529</td>\n",
+       "      <td>[-2.822106230123892, 4.567982061783375]</td>\n",
+       "      <td>0.3105</td>\n",
+       "      <td>0.6895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>132.077639</td>\n",
+       "      <td>143.196066</td>\n",
+       "      <td>-11.118427</td>\n",
+       "      <td>[-31.244308666809374, 15.769439320669207]</td>\n",
+       "      <td>0.8133</td>\n",
+       "      <td>0.1867</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Variable        Mean  Mean of Others  Mean Difference  \\\n",
+       "0      Dog  161.294692      124.494875        36.799818   \n",
+       "1      Cat  124.267499      160.507760       -36.240262   \n",
+       "2     Bird  144.004861      143.042332         0.962529   \n",
+       "3    Other  132.077639      143.196066       -11.118427   \n",
+       "\n",
+       "                                      95% CI  p-value_high  p-value_low  \n",
+       "0     [29.71343829231407, 44.12495329624621]        0.0000       1.0000  \n",
+       "1   [-43.30882050953682, -29.10321515854632]        1.0000       0.0000  \n",
+       "2    [-2.822106230123892, 4.567982061783375]        0.3105       0.6895  \n",
+       "3  [-31.244308666809374, 15.769439320669207]        0.8133       0.1867  "
+      ]
+     },
+     "execution_count": 331,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animal_types_outlier = ['Dog', 'Cat', 'Bird', 'Other']\n",
+    "bootstrap_all(animal_types_outlier, df_outliers, 'animal_type', 'time_in_shelter_days')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -4616,7 +4727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bulldogs had the longest adoption times of this group; however, if we look at *probability*, there is a 1/3 chance that a dog in this extreme group will be a Pit Bull. Below, I complete a bootstrap with 10,000 replicates to demonstrate that this probability is replicable."
+    "### Bulldogs had the longest adoption times of this group; however, if we look at *probability*, there is a 1/3 chance that a dog in this extreme group will be a Pit Bull. Below, I complete a bootstrap with 10,000 replicates to demonstrate that this probability is replicable."
    ]
   },
   {
@@ -4886,7 +4997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the terrier group and non-sporting group have significantly shorter adoption times than other groups in this extreme group, and the hound group has a (slightly) significantly longer adoption time."
+    "#### We can see that the terrier group and non-sporting group have significantly shorter adoption times than other groups in this extreme group, and the hound group has a (slightly) significantly longer adoption time."
    ]
   },
   {
@@ -5265,7 +5376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In dogs that have longer adoption times, younger dogs have significantly shorter adoption times, while dogs 2.5=5 years old and senior-aged dogs (aged 15+) have significantly longer adoption times. "
+    "#### In dogs that have longer adoption times, younger dogs have significantly shorter adoption times, while dogs 2.5-5 years old and senior-aged dogs (aged 15+) have significantly longer adoption times. "
    ]
   },
   {
